--- a/_config.yml
+++ b/_config.yml
@@ -93,6 +93,8 @@ exclude:
   - .LICENSE
   - .netlify.toml
   - .README.md
+  - _posts/en
+  - en/
 
 permalink: pretty # will strip extensions like .html from urls
 
