--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,8 +35,8 @@
   # - text: Publicaciones
   #   href: /recursos/publicaciones
   # - text: "---"
-  - text: Cursos
-    href: /recursos/cursos
+  - text: Formación
+    href: /recursos/formacion
   - text: Código
     href: /recursos/codigo
   - text: Bases de datos
