--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@
     href: /acerca-de/historia
   - text: Quiénes somos
     href: /acerca-de/quienes-somos
+  - text: Qué datos reunimos
+    href: /acerca-de/que-datos-reunimos
   - text: NaturalistaUY
     href: /acerca-de/naturalistauy
   # - text: Código de Investigación Responsable
