--- a/_config_staging.yml
+++ b/_config_staging.yml
@@ -1,1 +1,1 @@
-url: "https://hp-biodiversidata.gbif-staging.org/" # the base hostname & protocol for your staging site, e.g. https://hp-example.gbif-staging.org
+url: "https://biodiversidata.hp.gbif-staging.org/" # the base hostname & protocol for your staging site, e.g. https://example.hp.gbif-staging.org
